common: fix that $host always expands to localhost instead of actual hostname

* add function : ceph_get_hostname, ceph_get_short_hostname
* add unittest for hostname function
* expand $host in config.cc
* remove hardcode hostname in unittest_config

TODO: update documentation about this feature

Fixes: http://tracker.ceph.com/issues/11081

Signed-off-by: liuchang0812 <liuchang0812@gmail.com>